--- a/css22/assets/main.css
+++ b/css22/assets/main.css
@@ -1,9 +1,17 @@
+*{
+    box-sizing: border-box;
+}
+
 body{
     font-family: 'Ubuntu', sans-serif;
+    margin: 0;
 }
 
 #product-overview {
     background-color: rgb(231, 133, 76);
+    width: 100%;
+    height: 528px;
+    padding: 10px;    
 }
 
 .section-title{
@@ -18,4 +26,30 @@ body{
 
 h1{
     font-family: 'Courier New', Courier, monospace;
+}
+
+.main-header{
+    width: 100%;
+    background-color: rgb(115, 165, 148);
+    padding: 8px 16px;
+}
+
+.main-header > div{
+    display: inline-block;
+}
+
+.main-nav{
+    display: inline-block;
+    text-align: right;
+    width: calc(100% - 54px);
+}
+
+.main-nav__items{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.main-nav__item{
+    display: inline-block;
 }
